<resources>
    <string name="app_name">Lab3</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="toast_message">"Here is more information"</string>
    <string name="snackbar_message">"Undo"</string>
    <string name="text_view">"Look at my GUI"</string>
    <string name="button">"CLICK HERE"</string>
    <string name="checkbox">"Check this out"</string>
    <string name="switchText">"Switch on/off"</string>
    <string name="editText">"Type here"</string>
    <string name="tView1">"Enter your email address:"</string>
    <string name="emailText1">"Type email here"</string>
    <string name="tView2">"Type your password:"</string>
    <string name="eText2">"Type your password:"</string>
    <string name="btn">"Login"</string>
    <string name="tView3">"Your profile"</string>
    <string name="tView4">"Your name"</string>
    <string name="tView5">"Your email"</string>
    <string name="emailText2">"Enter your email"</string>
    <string name="eText3">"Enter your name"</string>
    <string name="pic">"Your picture"</string>
    <string name="image_message">"Click the button above to save a picture"</string>
</resources>