<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/text_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_weight="1"
            android:gravity="fill"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:layout_weight="1"
            android:gravity="fill"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            android:layout_weight="1"
            android:gravity="fill"/>

        <Switch
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchText"
            android:layout_weight="1"
            android:gravity="fill"/>
</LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editText"
        android:inputType="textPersonName"/>

</LinearLayout>
